network/calico/policies.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-egress-default-ns
spec:
  order: 100
  namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name in {"default"}
  types:
  - Egress
  egress:
    - action: Allow
      protocol: UDP
      destination:
        ports:
          - 53
    - action: Deny
      protocol: TCP
      destination:
        notNets:
          - 1.1.1.1/32
        ports:
          - 80
    - action: Allow
      protocol: TCP
